--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <h1>Welcome to Memwoir</h1>
-    <p>A safe and secure website where you //can save your random journal prompts</p>
+    <div class="background">
+        <h1>Welcome to Memwoir</h1>
+        <p>A safe and secure website where you //can save your random journal prompts</p>
+        <div id = 2></div>
+        <div id = 3></div>
+    </div>
+    
 </body>
 
 </html>
