--- a/index.html
+++ b/index.html
@@ -6,16 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memwoir</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="background">
-        <h1>Welcome to Memwoir</h1>
-        <p>A safe and secure website where you //can save your random journal prompts</p>
-        <div id = 2></div>
-        <div id = 3></div>
+        <div class="timer-container">
+        </div>
+        <div class="prompt-container">
+            <div class="login">
+                <h1 class="login-title">Welcome to Memwoir</h1>
+                <p>A safe and secure website where you can save your random journal prompts</p>
+                <form>
+                    <div class="login-container">
+                        <div class="input-group">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email">
+                            <span class="msg">Valid email</span>
+                        </div>
+                        <div class="input-group">
+                            <label for="password">Password</label>
+                            <input type="password" name="password" id="password">
+                            <span class="msg">Incorrect password</span>
+                        </div>
+                    </div>
+                    <button type="submit" class="login-button">Login</button>
+                </form>
+            </div>
+        </div>
     </div>
-    
+    <script src="app.js" type="module"></script>
 </body>
 
 </html>
