--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background">
         <div class="timer-container">
+            <span class="mins">00</span>
+            <span class="colon">:</span>
+            <span class="seconds">00</span>
+            <button type="button" class="timer-btn">
+                <span class="material-icons">play_arrow</span>
         </div>
         <div class="prompt-container">
             <div class="login">
@@ -35,7 +40,10 @@
             </div>
         </div>
     </div>
-    <script src="app.js" type="module"></script>
+    <script src="timer.js" type="module"></script>
+    
+    <div></div>
+    <div></div>
 </body>
 
 </html>
