--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
 </head>
 
 <body>
+    <div id="loginbar">
+            <div class="email">
+                <label for="email">Email</label>
+                <input type="email" name="email" placeholder="email" id="email">
+                <span class="msg">Valid email</span>
+            </div>
+            <div class="pw"
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+            <span class="msg">Incorrect password</span>
+        </div>
+            </div>
+            <button type="submit" class="login-button">Login</button>
+        </div>
+    </div>
+
+    <div id="navbar">
+        <h2>Memwoir.com</h2>
+        <p>A safe and secure website where you can save your random journal promts.</p>
+    </div>
     <div class="background">
         <div class="timer-container">
             <span class="mins">00</span>
@@ -20,22 +40,7 @@
         </div>
         <div class="prompt-container">
             <div class="login">
-                <h1 class="login-title">Welcome to Memwoir</h1>
-                <p>A safe and secure website where you can save your random journal prompts</p>
-                <form>
-                    <div class="login-container">
-                        <div class="input-group">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email">
-                            <span class="msg">Valid email</span>
-                        </div>
-                        <div class="input-group">
-                            <label for="password">Password</label>
-                            <input type="password" name="password" id="password">
-                            <span class="msg">Incorrect password</span>
-                        </div>
-                    </div>
-                    <button type="submit" class="login-button">Login</button>
+                
                 </form>
             </div>
         </div>
